# daikin_onecta

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .yamllint  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  bandit-baseline.txt  changelog.md  codecov.yml  coverage-baseline.txt  mkdocs.yml  mypy-baseline.txt  pyproject.toml  requirements_dev.txt  requirements_test.txt  requirements_test_pre_commit.txt  ruff-baseline.txt
.github/: dependabot.yml
.github/workflows/: bandit.yaml  codeql.yaml  constraints.txt  dependency-review.yaml  docs.yml  mypy.yaml  precommit.yaml  pylint.yaml  release.yaml  tests.yaml
custom_components/daikin_onecta/: __init__.py  application_credentials.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  daikin_api.py  device.py  diagnostics.py  exceptions.py  manifest.json  schema.py  select.py  sensor.py  switch.py  system_health.py  water_heater.py
custom_components/daikin_onecta/client/: __init__.py  api.py
custom_components/daikin_onecta/model/: __init__.py  data_point.py  device.py  management_point.py
custom_components/daikin_onecta/support/: __init__.py  circuit_breaker.py  retry.py  throttle.py
custom_components/daikin_onecta/translations/: de.json  fr.json  it.json
docs/: architecture.md  docstring_standards.md  index.md  release.md  security.md  versioning.md
docs/adr/: 0001-record-architecture-decisions.md  0002-resilience-patterns.md  0003-domain-model-package-layout.md  0004-cloud-lock-and-scan-ignore.md  0005-polling-strategy.md  0006-model-event-listeners.md
script/: bootstrap
scripts/: check_i18n.py  lint_exports.py
tests/: _support.py  conftest.py  test_config_flow.py  test_coordinator.py  test_daikin_api.py  test_data_point.py  test_device_listeners.py  test_fixture_contract.py  test_init.py  test_management_point.py  test_migrate.py  test_support.py
tests/snapshots/: test_init.ambr  test_init__test_altherma.ambr  test_init__test_altherma3m.ambr  test_init__test_altherma_ratelimit.ambr  test_init__test_altherma_schedule.ambr  test_init__test_button.ambr  test_init__test_climate.ambr  test_init__test_climate_fixedfanmode.ambr  test_init__test_climate_floorheatingairflow.ambr  test_init__test_dry.ambr  test_init__test_dry2.ambr  test_init__test_fanmode.ambr  test_init__test_gas.ambr  test_init__test_holidaymode.ambr  test_init__test_homehub.ambr  test_init__test_mc80z.ambr  test_init__test_minimal_data.ambr  test_init__test_offlinedevice.ambr  test_init__test_schedule.ambr  test_init__test_ururu.ambr  test_init__test_water_heater.ambr
